# comma-personal-backend

./: .air.toml  .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  lefthook.yml  package-lock.json  sqlc.yaml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: check-worktree-isolation.sh
.projd/: agent.json
.projd/progress/: alpr-config.json  alpr-dashboard-alert-badge.json  alpr-detection-worker.json  alpr-disclaimer-gate.json  alpr-docs.json  alpr-encounter-aggregator.json  alpr-encounters-api.json  alpr-encryption-at-rest.json  alpr-engine-service.json  alpr-engine-spike.json  alpr-frame-extractor.json  alpr-historical-backfill.json  alpr-manual-correction-api.json  alpr-notification-channels.json  alpr-plate-detail-page.json  alpr-retention-policy.json  alpr-route-overlay-ui.json  alpr-schema.json  alpr-settings-onboarding-ui.json  alpr-signature-fusion-heuristic.json  alpr-stalking-heuristic.json  alpr-tuning-ui.json  alpr-turn-detector.json  alpr-vehicle-attributes-engine.json  alpr-vehicle-signature-schema.json  alpr-video-redaction-export.json  alpr-watchlist-api.json  alpr-watchlist-page.json  (+70 more)
docker/: entrypoint.sh
docker/alpr/: Dockerfile  entrypoint.sh  pyproject.toml
docker/alpr/app/: __init__.py  attributes.py  main.py  test_attributes.py
docs/: ALPR-ENGINE-DECISION.md  ALPR.md  DEPLOYMENT.md  DEVICE-SETUP.md  ISSUES.md  grafana-dashboard.json  index.html
web/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  vitest.config.ts
(+418 files in other folders)
